bare_err_tree/test_cases/std/fail_src/false_tree_iter.stderr
error[E0277]: the trait bound `std::io::Error: AsErrTree` is not satisfied
  --> test_cases/std/fail_src/false_tree_iter.rs:20:5
   |
20 |     #[tree_iter_err]
   |     ^ the trait `AsErrTree` is not implemented for `std::io::Error`
   |
   = help: the following other types implement trait `AsErrTree`:
             &T
             (dyn std::error::Error + 'static)
             ErrStruct<'a>
             WrapErr<E>
   = note: required for the cast from `&std::io::Error` to `&dyn AsErrTree`
